--- a/Contractual.MetaClient/Contractual.MetaClient.csproj
+++ b/Contractual.MetaClient/Contractual.MetaClient.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0F99FBC2-B293-46A3-8924-BBB52C25EC1A}</ProjectGuid>
+    <ProjectGuid>{9709C3C6-AE97-4B4D-A6C9-D1A69FFCEDEA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Contractual</RootNamespace>
-    <AssemblyName>Contractual</AssemblyName>
+    <RootNamespace>Contractual.MetaClient</RootNamespace>
+    <AssemblyName>Contractual.MetaClient</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,49 +30,43 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.ServiceModel.Web" />
-    <Reference Include="System.Web" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AsyncResult.cs" />
-    <Compile Include="Configuration\ConfigurationElementCollection.cs" />
-    <Compile Include="Configuration\SerializeableConfigurationSection.cs" />
-    <Compile Include="DomainModel\LogicalContextStack.cs" />
-    <Compile Include="Exchange\ICommand.cs" />
-    <Compile Include="Exchange\Identifier\ICommandSpec.cs" />
-    <Compile Include="Exchange\IQuery.cs" />
-    <Compile Include="Exchange\IQueryProcessor.cs" />
-    <Compile Include="Exchange\IQuerySpec.cs" />
-    <Compile Include="Exchange\Paged.cs" />
-    <Compile Include="Exchange\PagingInformation.cs" />
-    <Compile Include="DomainModel\LogicalContext.cs" />
-    <Compile Include="MetaClient\HttpVerbInterfaces.cs" />
-    <Compile Include="DomainModel\Money.cs" />
-    <Compile Include="DomainModel\MoneyFormatInfo.cs" />
-    <Compile Include="ParallelIO.cs" />
+    <Compile Include="HttpClientConfiguration.cs" />
+    <Compile Include="HttpResponseMessage.cs" />
+    <Compile Include="MetaClient.cs" />
+    <Compile Include="MetaClientFactory.cs" />
+    <Compile Include="OAuth1Base.cs" />
+    <None Include="OAuth1MessageSigner.cs" />
+    <Compile Include="OAuthTokenPair.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Exchange\Sortation.cs" />
-    <Compile Include="WCF\ClientOfT.cs" />
-    <Compile Include="WCF\OutOfBand.cs" />
-    <Compile Include="WCF\OutOfBandClient.cs" />
-    <Compile Include="WCF\OutOfBandService.cs" />
-    <Compile Include="WCF\ProxyOfT.cs" />
-    <Compile Include="WCF\WcfProxyExtensions.cs" />
-    <Compile Include="WCF\WebOperation.cs" />
-    <Compile Include="WCF\WebOperationContextExtensions.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Contractual\Contractual.csproj">
+      <Project>{0f99fbc2-b293-46a3-8924-bbb52c25ec1a}</Project>
+      <Name>Contractual</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
