--- a/Contractual_Tests/Contractual_Tests.csproj
+++ b/Contractual_Tests/Contractual_Tests.csproj
@@ -45,13 +45,17 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CurrencyFormatter_Test.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="LogicalContext_Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Contractual\Contractual.csproj">
